tests/sksl/errors/ArraySplitDimensionsInStruct.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
struct S { float[2] x[2]; };
           ^^^^^^^^^^^^^
1 error
